2005-04-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (write-preamble): use (NAME . CONTENTS) and
	(NAME . FILE-NAME) tuples for font descriptions. 
	(write-preamble): display BeginFont DSC comments.

	* python/fontextract.py (write_extracted_fonts): new file. Extract
	font resources from a PS file.

	* scripts/lilypond-book.py (option_definitions): --psfonts option.
	(Compile_error.process_include): do_file returns chunks.

	* make/ly-vars.make (DVIPS_FLAGS): don't load .map file.

	* make/lysdoc-targets.make: .texi is .PRECIOUS

	* scripts/lilypond-book.py (write_if_updated): new function.

2005-04-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/framework-eps.scm (dump-stencils-as-EPSes): Massage messages.

2005-04-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-eps.scm (dump-stencils-as-EPSes): no massages.

	* input/regression/markup-syntax.ly: remove \score.

	* scm/define-markup-commands.scm (draw-circle): add fill argument

	* scm/stencil.scm (make-circle-stencil): add fill argument

	* ps/music-drawing-routines.ps: add fill argument.

	* ly/performer-init.ly: add CueVoice to MIDI too.

	* ps/music-drawing-routines.ps: new routine BeginEPSF /
	EndEPSF.

	* input/regression/markup-eps.ly: new file.

	* scm/framework-ps.scm (write-preamble): change order: vars should
	be inited before procedures.

	* scm/output-ps.scm (glyph-string): break lines. 255 chars is max
	for EPS files.

	* scm/define-markup-commands.scm (epsfile): add epsfile command.

2005-04-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* configure.in (gui_b): add check for ghostscript 8.15

2005-04-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/hairpin.cc (after_line_breaking): suicide the hairpinlet at
	start of line. Fixes cresc-after-newline.ly

	* lily/source-file.cc (file_line_column_string): use get_column().

2005-04-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/source-file.cc (get_column): utf-8 support for column numbers.
