@@ -17,4 +17,4 @@ TEXINFO_SOURCES += $(TELY_FILES) $(ITELY_FILES) $(ITEXI_FILES)
 EXTRA_DIST_FILES +=$(TELY_FILES) $(LY_FILES) $(ITEXI_FILES) $(ITELY_FILES) $(ILY_FILES)
 
 
-DVIPS_FLAGS= -h $(notdir $(basename $<)).fonts.ps
+DVIPS_FLAGS= -h $(subst dvi,fonts.ps,$<)
